--- a/.github/workflows/webhostmost登录保活.yml
+++ b/.github/workflows/webhostmost登录保活.yml
@@ -3,7 +3,7 @@ name: webhostmost登录保活
 on:
   # 每月的第一天 00:00 UTC 执行
   schedule:
-    - cron: '0 0 1 * *'
+    #- cron: '0 0 1 * *'
   workflow_dispatch:
 
 jobs:
